src/objects/Shop__c.object
<CustomObject>
    <description>It can be a part of corporation</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <formula>Monthly_Revenue__c  * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This is parameter belarus city</description>
        <label>City</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Belarus_City</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shops</relationshipLabel>
        <relationshipName>Shops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HasDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasDelivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>Image_path__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_path__c</fullName>
        <description>This field was created for record logo file path</description>
        <label>Image path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <description>It is mountly revenue for shop</description>
        <label>Monthly Revenue</label>
        <precision>12</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Methods__c</fullName>
        <label>Payment Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Belarus region</description>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Belarus_region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Shop website</description>
        <label>Site</label>
        <type>Url</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Rich_Web_Shop</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Monthly_Revenue__c</field>
            <operation>greaterThan</operation>
            <value>15000</value>
        </filters>
        <label>Rich Web Shop</label>
    </listViews>
    <listViews>
        <fullName>Web_shop</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Shop__c.Web_shop</value>
        </filters>
        <label>Web shop</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <recordTypes>
        <fullName>Fast_food</fullName>
        <active>true</active>
        <description>Type of shops</description>
        <label>Fast food</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <description>This is type of shop</description>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <description>This is type of shop</description>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IsManager</fullName>
        <active>true</active>
        <description>This rule for checking contacts role</description>
        <errorConditionFormula>AND(
    !ISPICKVAL( Contact__r.Role__c , &quot;Manager&quot;),  
    !ISBLANK( Contact__c )
)</errorConditionFormula>
        <errorMessage>Please, check contacts role. Should be &quot;Manager&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IsPositiveRevenue</fullName>
        <active>true</active>
        <errorConditionFormula>Monthly_Revenue__c  &lt;= 0</errorConditionFormula>
        <errorMessage>Please, check your mountly revenue</errorMessage>
    </validationRules>
</CustomObject>